# WhereHouseDB-V3

./: CMakeLists.txt  README.md  lol.json  test.json
src/: config.h  file.cpp  file.h  json.cpp  json.h  main.cpp  manage.cpp  manage.h  tests.cpp
